fix:remove blank space under hero image on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -84,7 +84,8 @@
 }
 
 .post-image-big {
-  height: 512px;
+  width: 100%;
+  padding-top: 56.25%;
   background-size: contain;
   background-repeat: no-repeat;
 }
